hostpath-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hostpath-storage
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hostpath-storage
  labels:
    k8s-app: hostpath-storage
  namespace: hostpath-storage
spec:
  selector:
    matchLabels:
      k8s-app: hostpath-storage
  template:
    metadata:
      labels:
        k8s-app: hostpath-storage
    spec:
      serviceAccountName: hostpath-storage-admin
      containers:
        - name: hostpath-storage
          image: quay.io/kubevirt/hostpath-provisioner
          imagePullPolicy: Always
          volumeMounts:
            - name: pv-volume # root dir where your bind mounts will be on the node
              mountPath: /var/hpvolumes
              #nodeSelector:
              #- name: xxxxxx
      volumes:
        - name: pv-volume
          hostPath:
            path: /var/hpvolumes
