sample-multi-interface.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2-nw2
  annotations:
    k8s.v1.cni.cncf.io/networks: pod2-nw2
spec:
  containers:
  - name: pod2-nw2
    image: wbitt/network-multitool
