vm-win2k19.yaml
apiVersion: v1
kind: Service
metadata:
  name: windows
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: rdp
    nodePort: 30389
    port: 27020
    protocol: TCP
    targetPort: 3389
  selector:
    kubevirt.io/domain: win2k19
  type: NodePort
