employee.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo
  template:
    metadata:
      labels:
        name: mongo
    spec:
      volumes:
        - name: mongo-storage
          emptyDir: {}
      containers:
      - name: mongo
        image: mongo
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-storage
            mountPath: /data/db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myemp
spec:
  replicas: 2
  selector:
    matchLabels:
      name: myemp
  template:
    metadata:
      labels:
        name: myemp
    spec:
      containers:
      - name: myemp
        image: prasenforu/employee
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: myemp
  labels:
    name: myemp
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    name: myemp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myemp-ing
spec:
  rules:
  - host: employee.3.16.154.209.nip.io
    http:
      paths:
      - backend:
          service:
            name: myemp
            port:
              number: 80
        path: /
        pathType: Prefix
